--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,5 @@
 @forward "./header";
 @forward "./home";
 @forward "./banner";
-@forward "./content"
+@forward "./content";
+@forward "./collection";
