--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -32,6 +32,7 @@
         right: -15%;
         & h1 {
           text-transform: uppercase;
+          display: inline;
           -webkit-text-stroke-width: 1px;
           -webkit-text-fill-color: transparent;
           -webkit-text-stroke-color: #363636;
