--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -69,6 +69,7 @@
 
       &_right {
         text-transform: capitalize;
+        z-index: 5;
         & h1 {
           font-size: 60px;
           width: 506px;
